<resources>
    <string name="app_name">選課小幫手</string>
    <string name="Account">Account</string>
    <string name="PWD">Password</string>
    <string name="Login">Login</string>
    <string name="Registration">Register</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="Course">Detail</string>

    <string name="menu_home">Home</string>
    <string name="menu_search">Search</string>
    <string name="menu_course">Course</string>
    <string name="menu_curriculum">Curriculum</string>
    <string name="menu_about">About</string>

    <string name="welcome">Welcome to RISH</string>
    <string name="Course_Name">Course Name</string>
    <string name="Professor_Name">Professor</string>
    <string name="course_id">Course ID</string>
    <string name="department">Department</string>
    <string name="Day">Day</string>
    <string name="Duration">Duration</string>
    <string name="Period_start">time</string>
    <string name="Period_end">to</string>

    <string name="filter">filter</string>

    <string name="Mon">Mon</string>
    <string name="Tue">Tue</string>
    <string name="Wed">Wed</string>
    <string name="Thu">Thu</string>
    <string name="Fri">Fri</string>
    <string name="Sat">Sat</string>
    <string name="Sun">Sun</string>

    <string name="knot_1">D1</string>
    <string name="knot_2">D2</string>
    <string name="knot_3">D3</string>
    <string name="knot_4">D4</string>
    <string name="knot_5">D5</string>
    <string name="knot_6">D6</string>
    <string name="knot_7">D7</string>
    <string name="knot_8">D8</string>
    <string name="knot_9">D9</string>
    <string name="knot_10">E1</string>
    <string name="knot_11">E2</string>
    <string name="knot_12">E3</string>

    <string name="string">%1$s</string>
    <string name="search_hint">老師名稱</string>

    <string name="comment">Comment</string>
    <string name="add_comment">Add Comment</string>
    <string name="kind">kind</string>
    <string name="major">必修</string>
    <string name="elective">選修</string>
    <string name="general">通識</string>
    <string name="minor">輔系</string>
    
</resources>
